# Big-Data-Theory-and-Practice

./: .gitignore  README.md
books/: README.md
courses/chapter01/: Linux_Filesystem_intro.md
courses/chapter01/参考资料/: 大数据历史.md
courses/chapter02/: Chubby分布式锁服务.md  ZooKeeper Leader选举机制详解.md  分布式系统概述.md
courses/chapter02/参考资料/: Chubby分布式锁服务.md  ZooKeeper Leader选举机制详解.md  分布式系统概述.md
courses/chapter02/参考资料/paxos/: Paxos介绍.md
courses/chapter03/参考资料/: GFS.md  HDFS.md  HDFS读写流程详解.md
courses/chapter04/: HDFS关键概念复习文档.md  HDFS常见操作.md  HDFS课后习题.md
env-setup/: single-node-cluster.md  single-node-cluster_se_school.md  single-node-cluster_windows.md
env-setup/multi-node/: multi-node-cluster.md  multi-user-setup.md  student-guide.md
env-setup/multi-node/cluster-setup-scripts/: 01-create_students.sh  02-create_hdfs_dirs.sh  03-setup_yarn_queues.sh  04-set_hdfs_quotas.sh  05-setup_student_client.sh  06-student_monitor.sh  07-view_student_logs.sh  08-diagnose_student_issues.sh  09-student_self_service.sh  10-hadoop_client_troubleshoot.sh  11-setup_backup.sh  12-admin_support_tools.sh
env-setup/signle-node/: single-node-cluster_se_school.md
hdfs-file-manager/: .gitignore  README.md  default_test_file.txt
hdfs-file-manager/src/main/java/com/bigdata/hdfs/: HDFSFileManager.java
paper/: README.md
practise/: Parquet实践练习.md  列式存储：Parquet 文件格式解析.md
practise/parquet-practice-project/: Makefile  README.md  main.py  pyproject.toml  requirements.txt
practise/parquet-practice-project/examples/: benchmark.py  quick_start.py
practise/parquet-practice-project/src/parquet_practice/: __init__.py  advanced_exercise.py  basic_exercise.py  compression_exercise.py  partitioning_exercise.py  query_optimization_exercise.py  utils.py
practise/parquet-practice-project/tests/: __init__.py  test_basic.py
